# arXiTeX

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
arXiTeX/: __init__.py  types.py
arXiTeX/lib/embedding/: generate.py  hg_generate.py
arXiTeX/lib/paper/: default_categories.py
arXiTeX/lib/paper/bibliography/: __init__.py
arXiTeX/lib/paper/catalog/: __init__.py  citations.py  download_arxiv_metadata.py
arXiTeX/lib/paper/s3_locator/: __init__.py
arXiTeX/lib/slogan/: prompt.py
arXiTeX/lib/statement/: __init__.py  connect_proofs.py  errors.py  extract_context.py  guess_main_file.py  run_with_timeout.py  validate_statements.py
arXiTeX/lib/statement/methods/plasTeX/: __init__.py  parse_node.py  separate_body_and_label.py  use_texinputs.py
arXiTeX/lib/statement/methods/regex/: __init__.py  flatten.py  log_envs.py
arXiTeX/lib/theorem/: __init__.py  download_arxiv_paper.py  errors.py  extract_theorem_envs.py  guess_main_file.py  parse.py  parse_by_plastex.py  remove_comments.py  run_with_timeout.py  separate_body_and_label.py  use_plastex_log_capturer.py  validate_theorems.py
arXiTeX/lib/theorem/methods/plasTeX/: __init__.py  parse.py  parse_node.py
arXiTeX/lib/theorem/methods/regex/: __init__.py  flatten.py  log_envs.py  parse.py
arXiTeX/lib/utils/: download_arxiv_paper.py
paper_cataloger/: catalog.py  types.py
paper_cataloger/lib/: citations.py  download_arxiv_metadata.py
scripts/: parse_paper.py
slogan_prompt_examples/: body-only.j2
tests/necessary_renewcommand/: main.tex  refs.bib
tests/with_bib/: main.bib  main.tex
